version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/JointBushingWorksheet.rst.txt
.. vale off



:class:`JointBushingWorksheet`
==============================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.JointBushingWorksheet

   Bases: :py:obj:`object`


   
   The worksheet of stiffness and damping coefficients for a bushing type joint.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: JointBushingWorksheet

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AddRow`
            - AddRow method.
          * - :py:attr:`~DeleteRow`
            - DeleteRow method.
          * - :py:attr:`~GetBushingDampingPerThetaUnitX`
            - Gets the Coefficient for the damping per ThetaUnitX at the indicated row index.
          * - :py:attr:`~GetBushingDampingPerThetaUnitY`
            - Gets the Coefficient for the damping per ThetaUnitY at the indicated row index.
          * - :py:attr:`~GetBushingDampingPerThetaUnitZ`
            - Gets the Coefficient for the damping per ThetaUnitZ at the indicated row index.
          * - :py:attr:`~GetBushingDampingPerUnitX`
            - Gets the Coefficient for the damping per UnitX at the indicated row index.
          * - :py:attr:`~GetBushingDampingPerUnitY`
            - Gets the Coefficient for the damping per UnitY at the indicated row index.
          * - :py:attr:`~GetBushingDampingPerUnitZ`
            - Gets the Coefficient for the damping per UnitZ at the indicated row index.
          * - :py:attr:`~GetBushingStiffnessPerThetaUnitX`
            - Gets the Coefficient for the stiffness per ThetaUnitX at the indicated row index.
          * - :py:attr:`~GetBushingStiffnessPerThetaUnitY`
            - Gets the Coefficient for the stiffness per ThetaUnitY at the indicated row index.
          * - :py:attr:`~GetBushingStiffnessPerThetaUnitZ`
            - Gets the Coefficient for the stiffness per ThetaUnitZ at the indicated row index.
          * - :py:attr:`~GetBushingStiffnessPerUnitX`
            - Gets the Coefficient for the stiffness per UnitX at the indicated row index.
          * - :py:attr:`~GetBushingStiffnessPerUnitY`
            - Gets the Coefficient for the stiffness per UnitY at the indicated row index.
          * - :py:attr:`~GetBushingStiffnessPerUnitZ`
            - Gets the Coefficient for the stiffness per UnitZ at the indicated row index.
          * - :py:attr:`~SetBushingDampingPerThetaUnitX`
            - Sets the Coefficient for the damping per ThetaUnitX at the indicated row index.
          * - :py:attr:`~SetBushingDampingPerThetaUnitY`
            - Sets the Coefficient for the damping per ThetaUnitY at the indicated row index.
          * - :py:attr:`~SetBushingDampingPerThetaUnitZ`
            - Sets the Coefficient for the damping per ThetaUnitZ at the indicated row index.
          * - :py:attr:`~SetBushingDampingPerUnitX`
            - Sets the Coefficient for the damping per UnitX at the indicated row index.
          * - :py:attr:`~SetBushingDampingPerUnitY`
            - Sets the Coefficient for the damping per UnitY at the indicated row index.
          * - :py:attr:`~SetBushingDampingPerUnitZ`
            - Sets the Coefficient for the damping per UnitZ at the indicated row index.
          * - :py:attr:`~SetBushingStiffnessPerThetaUnitX`
            - Sets the Coefficient for the stiffness per ThetaUnitX at the indicated row index.
          * - :py:attr:`~SetBushingStiffnessPerThetaUnitY`
            - Sets the Coefficient for the stiffness per ThetaUnitY at the indicated row index.
          * - :py:attr:`~SetBushingStiffnessPerThetaUnitZ`
            - Sets the Coefficient for the stiffness per ThetaUnitZ at the indicated row index.
          * - :py:attr:`~SetBushingStiffnessPerUnitX`
            - Sets the Coefficient for the stiffness per UnitX at the indicated row index.
          * - :py:attr:`~SetBushingStiffnessPerUnitY`
            - Sets the Coefficient for the stiffness per UnitY at the indicated row index.
          * - :py:attr:`~SetBushingStiffnessPerUnitZ`
            - Sets the Coefficient for the stiffness per UnitZ at the indicated row index.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~RowCount`
            - RowCount property.







Property detail
---------------
.. py:property:: RowCount
   :type: Optional[int]


   
   RowCount property.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: AddRow() -> int

   
   AddRow method.

   ..
       !! processed by numpydoc !!

.. py:method:: DeleteRow(index: int) -> None

   
   DeleteRow method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetBushingDampingPerThetaUnitX(index: int) -> float

   
   Gets the Coefficient for the damping per ThetaUnitX at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: GetBushingDampingPerThetaUnitY(index: int) -> float

   
   Gets the Coefficient for the damping per ThetaUnitY at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: GetBushingDampingPerThetaUnitZ(index: int) -> float

   
   Gets the Coefficient for the damping per ThetaUnitZ at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: GetBushingDampingPerUnitX(index: int) -> float

   
   Gets the Coefficient for the damping per UnitX at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: GetBushingDampingPerUnitY(index: int) -> float

   
   Gets the Coefficient for the damping per UnitY at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: GetBushingDampingPerUnitZ(index: int) -> float

   
   Gets the Coefficient for the damping per UnitZ at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: GetBushingStiffnessPerThetaUnitX(index: int) -> float

   
   Gets the Coefficient for the stiffness per ThetaUnitX at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: GetBushingStiffnessPerThetaUnitY(index: int) -> float

   
   Gets the Coefficient for the stiffness per ThetaUnitY at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: GetBushingStiffnessPerThetaUnitZ(index: int) -> float

   
   Gets the Coefficient for the stiffness per ThetaUnitZ at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: GetBushingStiffnessPerUnitX(index: int) -> float

   
   Gets the Coefficient for the stiffness per UnitX at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: GetBushingStiffnessPerUnitY(index: int) -> float

   
   Gets the Coefficient for the stiffness per UnitY at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: GetBushingStiffnessPerUnitZ(index: int) -> float

   
   Gets the Coefficient for the stiffness per UnitZ at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: SetBushingDampingPerThetaUnitX(index: int, newVal: float) -> float

   
   Sets the Coefficient for the damping per ThetaUnitX at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: SetBushingDampingPerThetaUnitY(index: int, newVal: float) -> float

   
   Sets the Coefficient for the damping per ThetaUnitY at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: SetBushingDampingPerThetaUnitZ(index: int, newVal: float) -> float

   
   Sets the Coefficient for the damping per ThetaUnitZ at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: SetBushingDampingPerUnitX(index: int, newVal: float) -> float

   
   Sets the Coefficient for the damping per UnitX at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: SetBushingDampingPerUnitY(index: int, newVal: float) -> float

   
   Sets the Coefficient for the damping per UnitY at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: SetBushingDampingPerUnitZ(index: int, newVal: float) -> float

   
   Sets the Coefficient for the damping per UnitZ at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: SetBushingStiffnessPerThetaUnitX(index: int, newVal: float) -> float

   
   Sets the Coefficient for the stiffness per ThetaUnitX at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: SetBushingStiffnessPerThetaUnitY(index: int, newVal: float) -> float

   
   Sets the Coefficient for the stiffness per ThetaUnitY at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: SetBushingStiffnessPerThetaUnitZ(index: int, newVal: float) -> float

   
   Sets the Coefficient for the stiffness per ThetaUnitZ at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: SetBushingStiffnessPerUnitX(index: int, newVal: float) -> float

   
   Sets the Coefficient for the stiffness per UnitX at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: SetBushingStiffnessPerUnitY(index: int, newVal: float) -> float

   
   Sets the Coefficient for the stiffness per UnitY at the indicated row index.

   ..
       !! processed by numpydoc !!

.. py:method:: SetBushingStiffnessPerUnitZ(index: int, newVal: float) -> float

   
   Sets the Coefficient for the stiffness per UnitZ at the indicated row index.

   ..
       !! processed by numpydoc !!



.. vale on